# server

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Authors.md  CLAUDE.md  CMakeLists.txt  ChangeLog.md  Doxyfile.in  README.md  THANKS  appveyor.yml  config.h.cmake
contrib/vmap_extractor/vmapextract/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpq_libmpq.cpp  mpq_libmpq04.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
dep/libmpq/: .gitignore  CMakeLists.txt  config.h.cmake
dep/libmpq/libmpq/: common.h  crypt_buf.h  explode.h  extract.h  huffman.h  mpq-internal.h  mpq.c  mpq.h  pack_begin.h  pack_begin.h.txt  pack_end.h  pack_end.h.txt  platform.h  wave.h
dep/libmpq/win/: libmpq_VC120.sln
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/RecastDemo/: CMakeLists.txt
src/modules/Bots/: CMakeLists.txt
src/modules/SD2/: CMakeLists.txt  ScriptDevMgr.cpp  ScriptDevMgr.h  config-sd2.h  sd2_revision_nr.h
src/proto/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  IClientLink.h  IWorldGateway.h  Listener.cpp  Listener.h  Opcodes.h  PacketCodec.cpp  PacketCodec.h
src/scripts/: 100ScriptDev2.vcxproj  110ScriptDev2.vcxproj  110ScriptDev2.vcxproj.filters  120ScriptDev2.vcxproj  120ScriptDev2.vcxproj.filters  CMakeLists.txt  README  ScriptDevMgr.cpp  ScriptDevMgr.h  ScriptMgr.cpp  ScriptMgr.h  config-sd2.h  config.h  scriptVC100.sln  scriptVC110.sln  scriptVC120.sln
src/scripts/VC100/: ScriptDev2.vcxproj
src/scripts/VC110/: ScriptDev2.vcxproj
src/scripts/VC120/: ScriptDev2.vcxproj
src/scripts/base/: escort_ai.cpp  follower_ai.cpp  follower_ai.h  guard_ai.cpp  guard_ai.h  pet_ai.cpp
src/scripts/docs/: GIT_guide_3_advanced_use.html  GIT_guide_3_advanced_use.txt  How_to_install.html  How_to_install.txt  Text-tables.md
src/scripts/include/: precompiled.h  sc_creature.cpp  sc_creature.h  sc_gossip.h  sc_grid_searchers.h  sc_instance.cpp
src/scripts/sql/: mangos_scriptname_clear.sql
src/scripts/system/: MangosdRev.cpp  ScriptLoader.cpp  system.cpp
src/shared/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h.in  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h  WorldPacket.h  revision.h  revision_data.h.in  revision_nr.h  revision_sql.h
src/shared/Auth/: ARC4.cpp  ARC4.h  AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  Md5.h  OpenSSLProvider.cpp  OpenSSLProvider.h  SARC4.cpp  SARC4.h  Sha1.cpp  Sha1.h  md5.cpp  md5.h
src/shared/Common/: Common.cpp  Common.h  GitRevision.h  Locales.cpp  Locales.h  TimeConstants.h
src/shared/Config/: Config.cpp  Config.h
src/shared/Console/: ConsoleUI.cpp  ConsoleUI.h  Terminal.cpp  Terminal.h
src/shared/DataStores/: DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h
src/shared/Database/: DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h  Database.cpp  Database.h  DatabaseEnv.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabasePostgre.cpp  DatabasePostgre.h  Field.cpp  Field.h  PGSQLDelayThread.h  QueryResult.h  QueryResultMysql.cpp  QueryResultMysql.h  QueryResultPostgre.cpp  QueryResultPostgre.h  SQLStorage.cpp  SQLStorage.h  SQLStorageImpl.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h
src/shared/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/shared/GameSystem/: Grid.h  NGrid.h  TypeContainer.h  TypeContainerVisitor.h
src/shared/Geometry/: CMakeLists.txt  GeometryMath.h  Matrix4.h  Quat.h  Shapes.h  Vector2.h  Vector3.h  Vector4.h
src/shared/Linux/: PosixDaemon.cpp  PosixDaemon.h
src/shared/LockedQueue/: LockedQueue.h
src/shared/Log/: ConsoleLogWriter.cpp  ConsoleLogWriter.h  Log.cpp  Log.h
src/shared/Platform/: Define.h
src/shared/Policies/: Singleton.h
src/shared/Threading/: DelayExecutor.cpp  ThreadLocalStore.h  Threading.cpp  Threading.h
src/shared/Utilities/: ByteBuffer.cpp  ByteBuffer.h  ByteConverter.h  ConcurrentRegistry.h  Errors.h  EventProcessor.cpp  IdList.h  LinkedList.h  MathDefines.h  PackedValues.h  ProgressBar.cpp  ProgressBar.h  RNGen.h  Timer.h  Util.cpp  Util.h  WorldPacket.h
src/shared/Win/: ServiceWin32.cpp  ServiceWin32.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/shared/net/: BindAddress.cpp  BindAddress.hpp  FlowControl.hpp  ISession.hpp  SendQueue.hpp  Server.hpp
src/shared/terrain/: Accelerators.cpp  Accelerators.hpp  CMakeLists.txt  CollisionModel.cpp  CollisionModel.hpp  Terrain.hpp  (+10 more)
src/tests/: BigNumberTest.cpp  ByteBufferStressTest.cpp  ByteBufferTest.cpp  CMakeLists.txt  CheckBuildPolicy.cmake  CheckWorldNetworkBoundary.cmake  ClientParserTest.cpp  CodecStressTest.cpp  CryptoStressTest.cpp  DatabaseConcurrencyTest.cpp  DynamicCollisionTest.cpp  NavBinningTest.cpp  NetworkStressTest.cpp  OpenSSLProviderTest.cpp  PacketCodecTest.cpp  SessionMailboxTest.cpp  SessionProtocolPolicyTest.cpp  TerrainModelTest.cpp  TestHarness.h  TileSerializerTest.cpp  main.cpp
src/tools/: BuildTools_VC100.sln  BuildTools_VC110.sln  BuildTools_VC120.sln  CMakeLists.txt  MoveMapGen_VC100.sln  MoveMapGen_VC100.vcxproj  MoveMapGen_VC110.sln  MoveMapGen_VC110.vcxproj  MoveMapGen_VC110.vcxproj.filters  MoveMapGen_VC120.sln  MoveMapGen_VC120.vcxproj  MoveMapGen_VC120.vcxproj.filters  map-extractor_VC100.sln  map-extractor_VC100.vcxproj  map-extractor_VC100.vcxproj.filters  map-extractor_VC110.sln  map-extractor_VC110.vcxproj  map-extractor_VC120.sln  map-extractor_VC120.vcxproj  vmapExtractor_VC100.sln  vmapExtractor_VC100.vcxproj  vmapExtractor_VC110.sln  vmapExtractor_VC110.vcxproj  vmapExtractor_VC120.sln  vmapExtractor_VC120.vcxproj  vmap_assemblerVC100.sln  vmap_assemblerVC110.sln  vmap_assemblerVC120.sln  vmap_assembler_VC100.vcxproj  vmap_assembler_VC110.vcxproj  vmap_assembler_VC120.vcxproj
(+3582 files in other folders)
